--- a/Styless.css
+++ b/Styless.css
@@ -459,7 +459,7 @@ body {
     color: #fff;
     text-decoration: navajowhite;
     background: #14744F;
-    border: 2px solid #ffff;
+    /* border: 2px solid #ffff; */
     border-radius: 25px;
   }
   
