--- a/Styless.css
+++ b/Styless.css
@@ -1600,7 +1600,8 @@ background: linear-gradient(180deg, #14744F 0%, #3a9e8b 100%);
 .event-wrap figure img {
     display: block;
     width: 100%;
-    height: 100%;
+    height: 100% ;
+    object-fit: cover;
 }
 
 .event-content-wrap {
